src/app/shared/header/header.component.css
.navbar-default  {
    transition: 0.2s ease;
    background: #232323;
}

.navbar .btn {
    border: 1px solid white;
}

.navbar-brand {
    font-size: 28px;
}

.nav-link {
    color: #fcfcfc;
    opacity: 1;
}

/* .user-name {
    position: relative;
    top: 0.30rem;
    margin-right: 1rem;
} */

.navbar-brand {
    font-family: 'Bangers', cursive;
    letter-spacing: 0.02em;
    font-size: 2.5rem;
}

.sticky-top {
    z-index:0;
}

